--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,8 +82,13 @@ dependencies {
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
-    // OkHttp
-    implementation("com.squareup.okhttp3:okhttp:5.0.0-alpha.7")
+
+    //okHttp
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+
+    //Coil (Image loading)
+    implementation 'com.google.accompanist:accompanist-coil:0.12.0'
 
     // JSON Converter
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
