--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.uchicago.gerber.favs">
+    package="edu.uchicago.gerber.books">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".FavApplication"
+        android:name="edu.uchicago.gerber.books.FavApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
         <activity
-            android:name=".MainActivity"
+            android:name="edu.uchicago.gerber.books.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.MovieApp.NoActionBar">
             <intent-filter>
